# newprg

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  autogen.sh  files.c  files.h  gopt.c  gopt.h  newprg.1  newprg.c  newprg.cfg  str.c  str.h
defaults/: README.dflt  lsw.dflt  options.dflt
templates/: AUTHORS  ChangeLog  INSTALL  NEWS  README  gopt.c  gopt.h  main.c
